Fixing alignment issues

--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@
     --primary-color: #ffb868; /* Lighter orange */
     --secondary-color: #cc7103; /* Darker orange */
     --background-gradient: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-    --card-background: #ffffff93; /* White for cards */
+    --card-background: #ffffff7a; /* White for cards */
     --text-color: #333; /* Default text color */
-    --nav-background: #333; /* Navigation background */
-    --nav-text-color: #fff; /* Navigation text color */
+    --nav-background: #fff; /* Navigation background */
+    --nav-text-color: #333; /* Navigation text color */
     --hero-text-color: #333; /* Navigation text color */
 
     /* Font Variables */
@@ -32,17 +32,34 @@ body {
     line-height: 1.6;
     color: var(--text-color);
     background: var(--background-gradient); /* Use gradient variable */
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    text-align: center;
+    /* align-items: center; */
+    /* margin: auto; */
+}
+
+/* Main Content Wrapper */
+main {
+    flex: 1; /* Allows the main content to grow and fill the available space */
 }
 
 h1, h2, h3 {
     font-family: var(--heading-font);
     margin: 0;
     padding: 0;
+    /* max-width: 600px; */
 }
 
 a {
     text-decoration: none;
     color: var(--text-color);
+}
+
+p {
+    max-width: 600px;
+    
 }
 
 /* Navigation Bar */
@@ -88,26 +105,25 @@ nav .nav-links a:hover {
 /* Hero Section */
 .hero {
     background: url('images/background/fog.JPG') no-repeat center center/cover;
-    height: 100vh;
+    height: auto;
+    min-height: max-content;
     display: flex;
     justify-content: center;
     align-items: center;
     color: var(--hero-text-color);
     text-align: center;
-}
-
-.hero-cards {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    /* margin-bottom: 150px; */
+    padding: 4rem 2rem;
 }
 
 .hero-content h1 {
     /* -webkit-text-stroke-width: 1px; */
     /* -webkit-text-stroke-color: black; */
     /* backdrop-filter: blur(5px); */
+    text-align: left;
     font-size: 4rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
+    margin-top: 10rem;
     font-family: var(--heading-font);
 }
 
@@ -115,6 +131,7 @@ nav .nav-links a:hover {
     /* -webkit-text-stroke-width: 1px; */
     /* -webkit-text-stroke-color: black; */
     /* backdrop-filter: blur(5px); */
+    text-align: left;
     font-size: 3rem;
     margin-bottom: 1rem;
     font-family: var(--heading-font);
@@ -124,7 +141,13 @@ nav .nav-links a:hover {
     /* backdrop-filter: blur(5px); */
     font-size: 1.5rem;
     margin-bottom: 2rem;
+    margin-top: 0;
+    text-align: left;
     font-family: var(--body-font);
+}
+
+.hero-content a {
+    font-size: 1.5rem;
 }
 
 .hero-content .btn {
@@ -140,23 +163,39 @@ nav .nav-links a:hover {
     background-color: #e0b10e;
 }
 
-/* Services Section */
-.services {
+.hero-cards {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     padding: 4rem 2rem;
-    text-align: center;
-    background: var(--background-gradient);
 }
 
-.services h2 {
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
-    font-family: var(--heading-font);
+/* Services Section */
+.services {
+    background: var(--background-gradient);
+    height: auto;
+    min-height: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--hero-text-color);
+    text-align: center;
+    /* margin-bottom: 150px; */
+    padding: 4rem 2rem;
 }
 
 .services-cards {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 4rem 2rem;
+}
+
+.services-content h2 {
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    font-family: var(--heading-font);
 }
 
 /* Technology Section */
@@ -187,33 +226,38 @@ nav .nav-links a:hover {
 }
 
 .safety h2 {
+    text-align: center;
+    flex-wrap: wrap;
     font-size: 2.5rem;
     margin-bottom: 0rem;
     font-family: var(--heading-font);
+    /* max-width: 600px; */
 }
 
 .safety h3 {
-    width: 500px;
     text-align: left;
     flex-wrap: wrap;
     font-size: 1.5rem;
     margin:0 auto;
     margin-bottom: 2rem;
     font-family: var(--heading-font);
+    max-width: 600px;
 }
 
 .safety p {
     /* backdrop-filter: blur(5px); */
-    width: 500px;
     text-align: left;
     flex-wrap: wrap;
     font-size: 1.0rem;
-    margin:0 auto;
+    margin: auto;
     margin-bottom: 2rem;
     font-family: var(--body-font);
 }
 
 .safety-cards {
+    /* display: grid;
+    justify-content: space-around;
+    grid-column-end: span 3; */
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -222,7 +266,7 @@ nav .nav-links a:hover {
 /* Card Styles (Shared by Services, Technology, and Safety Sections) */
 .card {
     background-color: var(--card-background);
-    backdrop-filter: blur(10px); /* Adds a blur effect */
+    backdrop-filter: blur(5px); /* Adds a blur effect */
     padding: 2rem;
     margin: 1rem;
     border-radius: 10px;
@@ -278,8 +322,8 @@ nav .nav-links a:hover {
 /* About Section */
 .about {
     padding: 4rem 2rem;
-    text-align: center;
     background: var(--background-gradient);
+    text-align: center;
 }
 
 .about h2 {
@@ -289,7 +333,6 @@ nav .nav-links a:hover {
 }
 
 .about p {
-    width: 500px;
     text-align: left;
     flex-wrap: wrap;
     font-size: 1.0rem;
@@ -299,11 +342,12 @@ nav .nav-links a:hover {
 }
 
 .about img {
-    width: 800px; /* Makes the image fill the card width */
-    height: 500px; /* Maintains the image's aspect ratio */
+    width: 600px; /* Makes the image fill the card width */
+    height: 400px; /* Maintains the image's aspect ratio */
     border-radius: 10px 10px 10px 10px; /* Rounds the top corners of the image */
     display: block; /* Removes extra space below the image */   
     margin: auto;
+    margin-top: 150px;
 }
 
 /* Contact Section */
@@ -313,16 +357,26 @@ nav .nav-links a:hover {
     background: var(--background-gradient);
 }
 
-.contact h2 {
-    font-size: 2.5rem;
+.contact-content h1 {
+    text-align: center;
+    font-size: 4rem;
+    margin-bottom: 0;
+    margin-top: 10rem;
+    font-family: var(--heading-font);
+}
+
+.contact-content h2 {
+    text-align: center;
+    font-size: 3rem;
     margin-bottom: 1rem;
     font-family: var(--heading-font);
 }
 
-.contact p {
-    font-size: 1.2rem;
-    max-width: 800px;
-    margin: 0 auto;
+.contact-content p {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    margin-top: 0;
+    text-align: center;
     font-family: var(--body-font);
 }
 
@@ -337,10 +391,8 @@ footer {
     background-color: var(--nav-background);
     color: var(--nav-text-color);
     text-align: center;
-    padding: 0.5rem 0;
-    position: static;
-    bottom: 0px;
-    width: 100%;
+    padding: 1rem 0;
+    margin-top: auto; /* Pushes the footer to the bottom */
 }
 
 footer p {
